--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,23 +1,27 @@
-name: Pylint
+name: Python Application
 
 on: [push]
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.10"]
+
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
+    - name: Check out code
+      uses: actions/checkout@v2
+
+    - name: Set up Python
+      uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: '3.10'  # 使用您需要的 Python 版本
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint
-    - name: Analysing the code with pylint
+        pip install openai==1.51.2  # 安裝指定版本的 OpenAI 套件
+        pip install -r requirements.txt  # 如果有其他依賴，這行也可以保留
+
+    - name: Run your code (if applicable)
       run: |
-        pylint $(git ls-files main.py)
+        python 'main.py'  # 替換為您的主程式名
