--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -24,4 +24,4 @@ jobs:
 
     - name: Run your code (if applicable)
       run: |
-        python 'main.py'  # 替換為您的主程式名
+        python main.py  # 替換為您的主程式名
