--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -19,9 +19,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install openai==0.28.1  # 安裝指定版本的 OpenAI 套件
+        pip install openai==1.51.2  # 安裝指定版本的 OpenAI 套件
         pip install -r requirements.txt  # 如果有其他依賴，這行也可以保留
 
     - name: Run your code (if applicable)
       run: |
-        python main.py  # 替換為您的主程式名
+        python 'main.py'  # 替換為您的主程式名
